# MyIdeas

./: Annotated_Mitre.xlsx  OpenSSLCertificateGeneration.txt  README.md  klogger.c  oppensslCommands.txt
 assignment4_pw_generator/: alphabet.c  alphabet.h  information_content.c  main.c  pw_generator.h
AuthCode/: client1.py  key_gen.py  private_key.pem  public_key.pem  server1.py
Certificate/: ec_private.pem  ec_public.pem
ChatServer/:  README.txt  main.py
Ciphering/: percent.h  substitution.c  substitution.h  test_percent.c
Collecting Metadata/: main.py
DNSAnalysis/: myplot
DigitalCertificate_Generation/: ec_private.pem  ec_public.pem  rsa_public.pem
Experiment/: main.py
FaceMe/: main.py
Gcopy/: main.py
MutualAuth/: client.py  client_private_key.pem  client_public_key.pem  keys_ma.py  server.py  server_public_key.pem
MutualAuthenticationProtocol/: server_private_key.pem
PacketAnalysis/: YTB.pcap  main.py
Password/: main.py
Password_Generator/: CMakeLists.txt  information_content.h  pw_generator.c
Password_sstrength_cal/: main.c
QuickAuth/: server.py
ServerUDP/: main.py
SharedSecretAuthentication/: ClientA.py  ClientB.py  TrustedServer.py
TCP Chat Client/: CodeREADME.txt  main.py
Tic_Tac_Client/: main.py
Tictac/: client.py
TimePro/: main.py
analysis_attck/: analsis.py
assignment2_pw_strength/: CMakeLists.txt
assignment3_pig_latin/: CMakeLists.txt  main.c
assignment5_cellular_automata/: CMakeLists.txt  arrays.c  arrays.h  main.c  picture.c  picture.h  test_function.h
assignment6_steganography/: CMakeLists.txt  main.c  steganography.h
cellular_automata/: rules.c  rules.h  test_function.c
chatroom/: main.py
clt/: client2.py
cryto/: client.py  server.py
final/: CMakeLists.txt  allocation.h
game/: main.py
grades/: main.py
midterm/: CMakeLists.txt  main.c  percent.c  test_substitution.c
midterm/cmake/: CompilerSetup.cmake
paritty/: main.py
project1b/: server.py
project2b/: README  main.py
pythonPacket/: main.py
(+23 files in other folders)
